# Launchpad-FYP

./: .env.example  .gitignore  CMakeLists.txt  DEX_Arbitrage_Mini_Challenge.docx  README.md  hardhat.config.ts  package-lock.json  package.json  part1_cycles_for_validation.json  refactoring_audit.txt  tsconfig.json
Documentation/: AI_use.md  AUDIT_30_PRACTICES.md  EXECUTIVE_SUMMARY.md  INTEGRATION.md  PRACTICES.txt  PRD.md  PRD_PART1.md  PRD_part2.md  REPORT.md  Task.txt  final_report.md  part2_report.md
contracts/: ArbitrageValidator.sol  MockV2Pair.sol
part2_data/: README.md  candidate_cycle.example.json  candidate_cycle.sepolia.mock.json
scripts/: README_part2.md  deployMockCycle.ts  deployValidator.ts  startMainnetFork.js  validateCycle.ts  validatePart1Cycles.ts
src/: ArbitrageAnalyzer.cpp  ArbitrageAnalyzer.h  Config.h  CycleDetector.cpp  CycleDetector.h  ExporterBase.h  Graph.cpp  Graph.h  HTMLExporter.cpp  HTMLExporter.h  JSONExporter.cpp  JSONExporter.h  JSONParser.cpp  JSONParser.h  Pool.cpp  Pool.h  Token.cpp  Token.h  main.cpp
tests/: test_CycleDetector.cpp
tests/part1/: test_Graph.cpp  test_Pool.cpp  test_Token.cpp
tests/part2/: ArbitrageValidator.test.ts
